[FEATURE] GET /activity/{activityId}/users
